FIX attempt for jarring scrolling effect on mobile 7 SVH

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -248,7 +248,7 @@ video {
   background-position: center;
   background-size: cover;
   width: 100%;
-  min-height: 100lvh;
+  min-height: 100svh;
   margin: 0;
   padding: 0;
 }
